<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2016 Carl-Philipp Harmant
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				android:id="@+id/frameLayout"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/bg_selector">

	<RelativeLayout
			android:id="@+id/welcome"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone">

		<TextView
				android:id="@+id/no_fav"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:paddingTop="35dp"
				android:text="@string/no_fav"
				android:textIsSelectable="false"
				android:gravity="center_horizontal"
				android:textSize="25sp"
				android:textStyle="bold"/>

		<TextView
				android:id="@+id/no_fav2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/no_fav"
				android:layout_centerHorizontal="true"
				android:text="@string/add_fav"
				android:textIsSelectable="false"
				android:paddingTop="15dp"
				android:textSize="18sp"
				android:textStyle="bold"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/no_fav2"
				android:layout_centerHorizontal="true"
				android:text="@string/add_fav2"
				android:textIsSelectable="false"
				android:textSize="16sp"
				android:textStyle="bold"/>
	</RelativeLayout>

	<android.support.design.widget.CoordinatorLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:id="@+id/main_coordinator"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<android.support.v4.widget.SwipeRefreshLayout
				android:id="@+id/activity_main_swipe_refresh_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:elevation="3dp">

			<android.support.v7.widget.RecyclerView
                android:id="@+id/favorites_list"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:dividerHeight="1dp"
					android:listSelector="@android:color/transparent">
			</android.support.v7.widget.RecyclerView>

		</android.support.v4.widget.SwipeRefreshLayout>

		<android.support.design.widget.FloatingActionButton
				android:id="@+id/floating_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_search_white_24dp"
				android:layout_margin="16dp"
				android:clickable="true"
				app:layout_anchor="@id/favorites_list"
				app:layout_anchorGravity="bottom|right|end"/>

	</android.support.design.widget.CoordinatorLayout>

</RelativeLayout>