<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2016 Carl-Philipp Harmant
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">

	<include
			layout="@layout/app_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	<android.support.v4.widget.SwipeRefreshLayout
			android:id="@+id/activity_station_swipe_refresh_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:elevation="3dp">

		<!-- Scroll view wrapping the layout to allow to scroll -->
		<ScrollView
				android:id="@+id/scrollViewTrainStation"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/bg_selector"
				android:paddingBottom="@dimen/activity_train_line_padding_bottom"
				android:paddingLeft="@dimen/activity_train_line_padding_left"
				android:paddingStart="@dimen/activity_train_line_padding_left"
				android:paddingRight="@dimen/activity_train_line_padding_right"
				android:paddingEnd="@dimen/activity_train_line_padding_right"
				android:paddingTop="@dimen/activity_train_line_padding_top">

			<!-- Main container. Vertical layout -->
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingBottom="@dimen/activity_train_line_padding_bottom"
					android:paddingStart="@dimen/activity_train_line_padding_left"
					android:paddingLeft="@dimen/activity_train_line_padding_left"
					android:paddingRight="@dimen/activity_train_line_padding_right"
					android:paddingEnd="@dimen/activity_train_line_padding_right"
					android:paddingTop="@dimen/activity_train_line_padding_top"
					android:orientation="vertical">

				<RelativeLayout
						android:id="@+id/activity_train_station_streetview_container"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingTop="@dimen/activity_train_line_padding_top">

					<ImageView
							android:id="@+id/activity_train_station_streetview_image"
							android:layout_width="match_parent"
							android:layout_height="@dimen/activity_station_street_map_height"
							android:contentDescription="@string/station_activity_google_map_link_desc"
							android:scaleType="centerCrop">
					</ImageView>

					<TextView
							android:id="@+id/activity_train_station_steetview_text"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentBottom="true"
							android:layout_marginLeft="4dp"
							android:layout_marginStart="4dp"
							android:textColor="@color/white"/>
				</RelativeLayout>
				<LinearLayout
						android:id="@+id/icons"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:layout_marginTop="15dp"
						android:baselineAligned="false"
						android:layout_marginLeft="15dp"
						android:layout_marginStart="15dp"
						android:layout_marginRight="15dp"
						android:layout_marginEnd="15dp"
						android:orientation="horizontal">
					<LinearLayout
							android:id="@+id/favorites_container"
							android:layout_width="0px"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:orientation="vertical"
							android:clickable="true"
							android:background="@drawable/any_selector"
							tools:ignore="UseCompoundDrawables">
						<ImageView
								android:id="@+id/activity_train_station_favorite_star"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:contentDescription="@string/station_activity_google_map_link_desc"
								android:src="@drawable/ic_favorite_white_24dp"
								android:layout_gravity="center_horizontal">
						</ImageView>
						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/station_activity_favorite_icon"
								android:layout_gravity="center_horizontal"
								android:textStyle="bold">
						</TextView>

					</LinearLayout>

					<LinearLayout
							android:id="@+id/map_container"
							android:layout_width="0px"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:orientation="vertical"
							android:clickable="true"
							android:background="@drawable/any_selector"
							tools:ignore="UseCompoundDrawables">
						<ImageView
								android:id="@+id/activity_train_station_map_image"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:contentDescription="@string/station_activity_google_map_link_desc"
								android:src="@drawable/ic_place_white_24dp"
								android:layout_gravity="center_horizontal">
						</ImageView>
						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_gravity="center_horizontal"
								android:text="@string/station_activity_map_icon"
								android:textStyle="bold">
						</TextView>
					</LinearLayout>
					<LinearLayout
							android:id="@+id/walk_container"
							android:layout_width="0px"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:orientation="vertical"
							android:clickable="true"
							android:background="@drawable/any_selector"
							tools:ignore="UseCompoundDrawables">
						<ImageView
								android:id="@+id/activity_train_station_map_direction"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:contentDescription="@string/station_activity_google_map_link_desc"
								android:src="@drawable/ic_directions_walk_white_24dp"
								android:layout_gravity="center_horizontal">
						</ImageView>
						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/station_activity_walk_icon"
								android:layout_gravity="center_horizontal"
								android:textStyle="bold">
						</TextView>
					</LinearLayout>
				</LinearLayout>

				<LinearLayout
						android:id="@+id/activity_train_station_details"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">
				</LinearLayout>
			</LinearLayout>
		</ScrollView>
	</android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>